$Id: History,v 1.37 2000-11-27 11:04:07 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

27 November 2000 Makoto Asai (interfaces-V02-00-02)
- G4VUIShell.hh : add virtual keyword to the destructor.

11 August 2000 Guy Barrand
- G4UIWo.cc : add some cast in order to compile with OSF1/cxx strict_ansi mode.

1 August 2000 Gabriele Cosmo (interfaces-V02-00-01)
- Fixed warnings on HP-aCC system in G4UItcsh.cc, due to unproper usage of G4int
  where unsigned (size_t) was requested instead.

31 July 2000 Gonzalo Gracia
- Modifications required to compile on NT
  Operator string::[] requires size_t argument. 
  Cast from integer to size_t in several places in basic/src/G4UIArrayString.cc
  and G4VUIshell.cc

22 July 2000 Makoto Asai (interfaces-V02-00-00)
- Modify G4UIterminal, G4VUIshell, G4UIcsh and G4UItcsh to display the
  break status as a prompt characters.

25 June 2000 John Allison (interfaces-V01-01-06-old-G4UIterminal)
- As interfaces-V01-01-06 but old revisions of G4UIterminal.cc/hh.

23 June 2000 John Allison (interfaces-V01-01-06)
- Protected G4UIterminal, G4Ui[t]csh against access by index to null strings.

21 June 2000 John Allison (interfaces-V01-01-05)