@@ -1,4 +1,4 @@
-$Id: History,v 1.37 2000-11-27 11:04:07 asaim Exp $
+$Id: History,v 1.38 2000-11-28 08:13:24 barrand Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+28 November 2000 Guy Barrand
+- G4Xt.cc ; SUN-CC : correct warning : argc hides G4VInteractorManager::argc.
 
 27 November 2000 Makoto Asai (interfaces-V02-00-02)
 - G4VUIShell.hh : add virtual keyword to the destructor.
